fix (WA-575): Hide overflow of other slide cards that should not be showing.

--- a/docroot/themes/custom/wateraid/components/image_gallery/image_gallery.scss
+++ b/docroot/themes/custom/wateraid/components/image_gallery/image_gallery.scss
@@ -19,6 +19,7 @@
 
   &__wrapper {
     @include grid();
+    overflow: hidden;
   }
 
   &__content {
